--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "8.3.4",
   "description": "React.js Google Maps integration component",
   "main": "lib/index.js",
-  "files": ["lib/", "src/lib", "CHANGELOG.md", "types/index.d.ts"],
+  "files": ["lib/", "src/lib", "CHANGELOG.md", "index.d.ts"],
   "lint-staged": {
     "*.{js,jsx,json,css}": ["prettier --write", "git add"]
   },
@@ -76,7 +76,6 @@
     "url": "https://github.com/tomchentw/react-google-maps/issues"
   },
   "homepage": "https://tomchentw.github.io/react-google-maps/",
-  "types": "types",
   "devDependencies": {
     "@types/googlemaps": "^3.26.20",
     "@types/markerclustererplus": "^2.1.29",
